level_zero-sys/src/ze_api.rs

extern "C" {
    #[doc = ""]
    #[doc = " @brief Retrieves a sub-device from a device"]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - Multiple calls to this function will return identical device handles,"]
    #[doc = "       in the same order."]
    #[doc = "     - The number of handles returned from this function is affected by the"]
    #[doc = "       ::ZE_AFFINITY_MASK environment variable."]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @remarks"]
    #[doc = "   _Analogues_"]
    #[doc = "     - clCreateSubDevices"]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDevice`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == pCount`"]
    pub fn zeDeviceGetSubDevices(
        hDevice: ze_device_handle_t,
        pCount: *mut u32,
        phSubdevices: *mut ze_device_handle_t,
    ) -> ze_result_t;
}
impl _ze_device_type_t {
    #[doc = "< Graphics Processing Unit"]
    pub const ZE_DEVICE_TYPE_GPU: _ze_device_type_t = _ze_device_type_t(1);
}
impl _ze_device_type_t {
    #[doc = "< Central Processing Unit"]
    pub const ZE_DEVICE_TYPE_CPU: _ze_device_type_t = _ze_device_type_t(2);
}
impl _ze_device_type_t {
    #[doc = "< Field Programmable Gate Array"]
    pub const ZE_DEVICE_TYPE_FPGA: _ze_device_type_t = _ze_device_type_t(3);
}
impl _ze_device_type_t {
    #[doc = "< Memory Copy Accelerator"]
    pub const ZE_DEVICE_TYPE_MCA: _ze_device_type_t = _ze_device_type_t(4);
}
impl _ze_device_type_t {
    pub const ZE_DEVICE_TYPE_FORCE_UINT32: _ze_device_type_t = _ze_device_type_t(2147483647);
}
#[repr(transparent)]
#[doc = ""]
#[doc = " @brief Supported device types"]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub struct _ze_device_type_t(pub u32);
#[doc = ""]
#[doc = " @brief Supported device types"]
pub use self::_ze_device_type_t as ze_device_type_t;
#[doc = ""]
#[doc = " @brief Device universal unique id (UUID)"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ze_device_uuid_t {
    #[doc = "< [out] opaque data representing a device UUID"]
    pub id: [u8; 16usize],
}
#[test]
fn bindgen_test_layout__ze_device_uuid_t() {
    assert_eq!(
        ::std::mem::size_of::<_ze_device_uuid_t>(),
        16usize,
        concat!("Size of: ", stringify!(_ze_device_uuid_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_ze_device_uuid_t>(),
        1usize,
        concat!("Alignment of ", stringify!(_ze_device_uuid_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_ze_device_uuid_t>())).id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_uuid_t),
            "::",
            stringify!(id)
        )
    );
}
impl _ze_device_property_flags_t {
    #[doc = "< Device is integrated with the Host."]
    pub const ZE_DEVICE_PROPERTY_FLAG_INTEGRATED: _ze_device_property_flags_t =
        _ze_device_property_flags_t(1);
}
impl _ze_device_property_flags_t {
    #[doc = "< Device handle used for query represents a sub-device."]
    pub const ZE_DEVICE_PROPERTY_FLAG_SUBDEVICE: _ze_device_property_flags_t =
        _ze_device_property_flags_t(2);
}
impl _ze_device_property_flags_t {
    #[doc = "< Device supports error correction memory access."]
    pub const ZE_DEVICE_PROPERTY_FLAG_ECC: _ze_device_property_flags_t =
        _ze_device_property_flags_t(4);
}
impl _ze_device_property_flags_t {
    #[doc = "< Device supports on-demand page-faulting."]
    pub const ZE_DEVICE_PROPERTY_FLAG_ONDEMANDPAGING: _ze_device_property_flags_t =
        _ze_device_property_flags_t(8);
}
impl _ze_device_property_flags_t {
    pub const ZE_DEVICE_PROPERTY_FLAG_FORCE_UINT32: _ze_device_property_flags_t =
        _ze_device_property_flags_t(2147483647);
}
impl ::std::ops::BitOr<_ze_device_property_flags_t> for _ze_device_property_flags_t {
    type Output = Self;
    #[inline]
    fn bitor(self, other: Self) -> Self {
        _ze_device_property_flags_t(self.0 | other.0)
    }
}
impl ::std::ops::BitOrAssign for _ze_device_property_flags_t {
    #[inline]
    fn bitor_assign(&mut self, rhs: _ze_device_property_flags_t) {
        self.0 |= rhs.0;
    }
}
impl ::std::ops::BitAnd<_ze_device_property_flags_t> for _ze_device_property_flags_t {
    type Output = Self;
    #[inline]
    fn bitand(self, other: Self) -> Self {
        _ze_device_property_flags_t(self.0 & other.0)
    }
}
impl ::std::ops::BitAndAssign for _ze_device_property_flags_t {
    #[inline]
    fn bitand_assign(&mut self, rhs: _ze_device_property_flags_t) {
        self.0 &= rhs.0;
    }
}
#[repr(transparent)]
#[doc = ""]
#[doc = " @brief Supported device property flags"]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub struct _ze_device_property_flags_t(pub u32);
#[doc = ""]
#[doc = " @brief Supported device property flags"]
pub use self::_ze_device_property_flags_t as ze_device_property_flags_t;
#[doc = ""]
#[doc = " @brief Device properties queried using ::zeDeviceGetProperties"]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct _ze_device_properties_t {
    #[doc = "< [in] type of this structure"]
    pub stype: ze_structure_type_t,
    #[doc = "< [in,out][optional] pointer to extension-specific structure"]
    pub pNext: *mut ::std::os::raw::c_void,
    #[doc = "< [out] generic device type"]
    pub type_: ze_device_type_t,
    #[doc = "< [out] vendor id from PCI configuration"]
    pub vendorId: u32,
    #[doc = "< [out] device id from PCI configuration"]
    pub deviceId: u32,
    #[doc = "< [out] 0 (none) or a valid combination of ::ze_device_property_flags_t"]
    pub flags: ze_device_property_flags_t,
    #[doc = "< [out] sub-device id. Only valid if ::ZE_DEVICE_PROPERTY_FLAG_SUBDEVICE"]
    #[doc = "< is set."]
    pub subdeviceId: u32,
    #[doc = "< [out] Clock rate for device core."]
    pub coreClockRate: u32,
    #[doc = "< [out] Maximum memory allocation size."]
    pub maxMemAllocSize: u64,
    #[doc = "< [out] Maximum number of logical hardware contexts."]
    pub maxHardwareContexts: u32,
    #[doc = "< [out] Maximum priority for command queues. Higher value is higher"]
    #[doc = "< priority."]
    pub maxCommandQueuePriority: u32,
    #[doc = "< [out] Number of threads per EU."]
    pub numThreadsPerEU: u32,
    #[doc = "< [out] The physical EU simd width."]
    pub physicalEUSimdWidth: u32,
    #[doc = "< [out] Number of EUs per sub-slice."]
    pub numEUsPerSubslice: u32,
    #[doc = "< [out] Number of sub-slices per slice."]
    pub numSubslicesPerSlice: u32,
    #[doc = "< [out] Number of slices."]
    pub numSlices: u32,
    #[doc = "< [out] Returns the resolution of device timer in nanoseconds used for"]
    #[doc = "< profiling, timestamps, etc."]
    pub timerResolution: u64,
    #[doc = "< [out] Returns the number of valid bits in the timestamp value."]
    pub timestampValidBits: u32,
    #[doc = "< [out] Returns the number of valid bits in the kernel timestamp values"]
    pub kernelTimestampValidBits: u32,
    #[doc = "< [out] universal unique identifier. Note: Subdevices will have their"]
    #[doc = "< own uuid."]
    pub uuid: ze_device_uuid_t,
    #[doc = "< [out] Device name"]
    pub name: [::std::os::raw::c_char; 256usize],
}
